changed pagination's characters

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,10 +2,10 @@
 pt-BR:
   views:
     pagination:
-      first: "&laquo; Primeiro"
-      last: "Último &raquo;"
-      previous: "&lsaquo; Anterior"
-      next: "Próximo &rsaquo;"
+      first: "&laquo;"
+      last: "&raquo;"
+      previous: "&lsaquo;"
+      next: "&rsaquo;"
       truncate: "&hellip;"
   activerecord:
     errors:
